2006-12-10  Douglas Bates  <bates@stat.wisc.edu>

	* src/CHMfactor.c (CHMfactor_to_sparse): change LDL factorization
	to LL before converting to a sparse matrix. (The LDL form can be
	converted to a sparse matrix but it is implicitly a unit
	triangular matrix and a diagonal matrix overwritten on the diagonal.)

2006-12-09  Douglas Bates  <bates@stat.wisc.edu>

	* src/chm_common.c (chm_factor_to_SEXP): allocate and fill the Dim slot.

2006-12-08  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Version): updated -> release 0.9975-7
	* src/{init.c,chm_common.c}, inst/include/*: export cholmod_analyze_p

2006-11-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/diagMatrix.R (%*%): write a direct [diag o Csparse] method

2006-11-29  Douglas Bates  <bates@stat.wisc.edu>

	* src/dgeMatrix.c (dgeMatrix_solve): Check error code from dgetri.
	* tests/dg_Matrix.R: Add Barry Rowlingson's test of a matrix that
	is exactly singular.

2006-11-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Date): updated -> release 0.9975-6

2006-11-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Csparse.R (replCmat): symmetric indexing of symmetric matrix
	now returns symmetric.

	* R/zzz.R ("diag<-"): replace "diag<-" in base for R <= 2.4.x

	* R/Matrix.R (.M.sub.i.2col):  new, for  M[ cbind(i,j) ] indexing.
	* R/Matrix.R (.M.repl.i.2col): new, for  M[ cbind(i,j) ] <- value

	* R/Auxiliaries.R (.type.kind): added

2006-11-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/cs.[ch]: updated to CSparse Version 2.0.3 by simply
	running src/CSparse_install.sh

	* R/denseMatrix.R: "[": keep symmetric on symmetric indexing.

2006-11-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/dsCMatrix.c (dsCMatrix_Csparse_solve): new
	* R/dsCMatrix.R (solve): "fully-sparse" using the above.

	* R/AllClass.R: "pMatrix" now also inherits from "generalMatrix"

	* tests/Class+Meth.R (tstMatrixClass): now assure
	the (important in method programming) property :
