@@ -1,3 +1,8 @@
+2006-12-11  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/Tsparse.R ([): fix long standing typo in symmetric case
+	* man/dsCMatrix-class.Rd: add example exhibiting the above case
+
 2006-12-10  Douglas Bates  <bates@stat.wisc.edu>
 
 	* src/CHMfactor.c (CHMfactor_to_sparse): change LDL factorization
